# StockMarketWebapp

./: .gitignore  main.cpp  service.py
Server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  request.h  response.h  server.cpp  server.h  server_log.txt  test.json
Server/database/: users.json
Server/endpoints/: aquireStocks.cpp  aquireStocks.h  changeStock.cpp  changeStock.h  endpointHandler.h  endpointStrategy.h  login.cpp  login.h  logout.cpp  logout.h  notFound.cpp  notFound.h  processAquireStocks.cpp  processAquireStocks.h  processedChange.cpp  processedChange.h  register.cpp  register.h
Service/: endpoints.py  run.py  service.py  service_socket.py  stocks.json
Stockappui/: package-lock.json  package.json
Stockappui/src/: App.js  index.css  styles.css
Stockappui/src/components/: ThemeContext.js
Stockappui/src/pages/: AppRouter.js  Login.js  ManageStocks.js  Register.js  UserHome.js
Stockappui/src/services/: useSocket.js
middleware/: index.js  package-lock.json  package.json
